# data-preparation-agent

./: .gitignore  agent.py  app.py  dataframe_singleton.py  graph.py  main.py  pyproject.toml  query.py  requirements.txt  tools.py
