[project]
name = "data-preparation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "decorator==5.2.1",
    "distro==1.9.0",
    "executing==2.2.0",
    "filetype==1.2.0",
    "flask==3.1.1",
    "google-ai-generativelanguage==0.6.18",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.73.1",
    "grpcio-status==1.73.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "ipython==9.3.0",
    "ipython-pygments-lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core==0.3.66",
    "langchain-google-genai==2.1.5",
    "langchain-openai==0.3.27",
    "langgraph==0.5.0",
    "langgraph-checkpoint==2.1.0",
    "langgraph-prebuilt==0.5.1",
    "langgraph-sdk==0.1.72",
    "langsmith==0.4.4",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "numpy==2.2.6",
    "openai==1.93.0",
    "orjson==3.10.18",
    "ormsgpack==1.10.0",
    "packaging==24.2",
    "pandas>=2.3.0",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "prompt-toolkit==3.0.51",
    "proto-plus==1.26.1",
    "protobuf==6.31.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "streamlit>=1.46.1",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "xxhash==3.5.0",
    "zstandard==0.23.0",
]
